--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button onclick="getPosts()">Go!</button>
   </div>
   <div id="container">
-  <div>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
